Added ability for admin to create a new user. Added server method to handle creating that new user without logging in as the user.

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -20,6 +20,10 @@
     height: 200px;
 }
 
+.admin-panel>a {
+    margin-bottom:10px;
+}
+
 .admin-user-list-row {
     border-top: 1px lightgray solid;
 }
