--- a/src/public/views/admin/templates/adminPanel.view.client.html
+++ b/src/public/views/admin/templates/adminPanel.view.client.html
@@ -1,7 +1,8 @@
 <div class="col-sm-3"></div>
 <div class="col-sm-6 content-panel">
-    <div class="container-fluid">
+    <div class="container-fluid admin-panel">
         <h1>Admin Panel</h1>
+        <a class="btn btn-sm btn-info" href="#!/admin/createUser">create new user</a>
         <div ng-repeat="user in model.users" class="admin-user-list-row">
             <div class="row">
                 <span class="pull-left">
